--- a/ui/src/main/resources/cz/masci/drd/ui/adventure/fxml/weapon-detail-editor.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/adventure/fxml/weapon-detail-editor.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
 
-
+<?import cz.masci.drd.ui.adventure.control.WeaponDetailControl?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <center>
-    <cz.masci.drd.ui.adventure.control.WeaponDetailControl fx:id="editor"/>
+    <cz.masci.drd.ui.adventure.control.WeaponDetailControl fx:id="editor">
+      <BorderPane.margin>
+          <Insets top="5.0" right="5.0" bottom="5.0"/>
+      </BorderPane.margin>
+    </cz.masci.drd.ui.adventure.control.WeaponDetailControl>
   </center>
 </BorderPane>
