--- a/ui/src/main/resources/cz/masci/drd/ui/adventure/fxml/adventure-detail-dialog.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/adventure/fxml/adventure-detail-dialog.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-
+<?import cz.masci.drd.ui.adventure.control.AdventureDetailControl?>
+<?import javafx.scene.control.ButtonType?>
+<?import javafx.scene.control.DialogPane?>
 <DialogPane fx:id="dialog" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <content>
      <cz.masci.drd.ui.adventure.control.AdventureDetailControl fx:id="editor" />
