--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/magic-select-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/magic-select-action.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <!--
   ~ Copyright (c) 2023
   ~
@@ -22,6 +19,12 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
@@ -34,5 +37,5 @@
     <Label text="Příjemce kouzla"/>
     <ComboBox fx:id="duellistBox" GridPane.columnIndex="1"/>
     <Label text="Kouzlo" GridPane.rowIndex="1"/>
-    <TextField fx:id="spellTxt" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <MFXTextField fx:id="spellTxt" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 </GridPane>
