--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/other-select-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/other-select-action.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <!--
   ~ Copyright (c) 2023
   ~
@@ -22,6 +19,11 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
@@ -31,5 +33,5 @@
         <RowConstraints minHeight="25.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER"/>
     </rowConstraints>
     <Label text="Jiná akce" GridPane.rowIndex="1"/>
-    <TextField fx:id="otherTxt" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <MFXTextField fx:id="otherTxt" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 </GridPane>
