--- a/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-duellist-slide.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-duellist-slide.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <!--
   ~ Copyright (c) 2023
   ~
@@ -23,6 +20,16 @@
   -->
 
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
         AnchorPane.topAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
 >
@@ -41,22 +48,22 @@
             </rowConstraints>
             <children>
                 <Label text="Název"/>
-                <TextField GridPane.columnIndex="1" fx:id="txtName"/>
+                <MFXTextField GridPane.columnIndex="1" fx:id="txtName"/>
                 <Label text="Útočné číslo" GridPane.rowIndex="1"/>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="txtOffense"/>
+                <MFXTextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="txtOffense"/>
                 <Label text="Obranné číslo" GridPane.rowIndex="2"/>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="txtDefense"/>
+                <MFXTextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="txtDefense"/>
                 <Label text="Útočnost" GridPane.rowIndex="3"/>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtDamage"/>
+                <MFXTextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="txtDamage"/>
                 <Label text="Životy" GridPane.rowIndex="4"/>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="txtLive"/>
+                <MFXTextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="txtLive"/>
             </children>
         </GridPane>
         <FlowPane hgap="10.0" VBox.vgrow="NEVER">
             <children>
-                <Button mnemonicParsing="false" text="Přidat" fx:id="btnAdd" onAction="#onAddDuellist"/>
-                <Button mnemonicParsing="false" text="Upravit" fx:id="btnEdit" onAction="#onEditDuellist"/>
-                <Button mnemonicParsing="false" text="Odebrat" fx:id="btnDelete" onAction="#onDeleteDuellist"/>
+                <MFXButton mnemonicParsing="false" text="Přidat" fx:id="btnAdd" onAction="#onAddDuellist"/>
+                <MFXButton mnemonicParsing="false" text="Upravit" fx:id="btnEdit" onAction="#onEditDuellist"/>
+                <MFXButton mnemonicParsing="false" text="Odebrat" fx:id="btnDelete" onAction="#onDeleteDuellist"/>
             </children>
         </FlowPane>
         <GridPane VBox.vgrow="ALWAYS">
