--- a/ui/src/main/resources/cz/masci/drd/ui/monster/fxml/monster-detail-dialog.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/monster/fxml/monster-detail-dialog.fxml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import cz.masci.drd.ui.monster.control.MonsterDetailControl?>
 <?import javafx.scene.control.ButtonType?>
 <?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
 <DialogPane fx:id="dialog" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <content>
     <cz.masci.drd.ui.monster.control.MonsterDetailControl fx:id="editor" />
