--- a/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-group-slide.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/slide/controller/impl/fxml/battle-group-slide.fxml
@@ -20,51 +20,43 @@
   -->
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXListView?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<VBox fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="400.0" spacing="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+
+<VBox fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="400.0" spacing="5.0"
+        xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
         AnchorPane.topAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
 >
     <children>
-      <GridPane hgap="5.0" vgap="5.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-          <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Název" />
-            <MFXTextField fx:id="txtName" GridPane.columnIndex="1" />
-         </children>
-      </GridPane>
-      <FlowPane hgap="10.0" VBox.vgrow="NEVER">
-         <children>
-            <MFXButton fx:id="btnAdd" mnemonicParsing="false" onAction="#onAddGroup" text="Přidat" />
-            <MFXButton fx:id="btnEdit" mnemonicParsing="false" onAction="#onEditGroup" text="Upravit" />
-            <MFXButton fx:id="btnDelete" mnemonicParsing="false" onAction="#onDeleteGroup" text="Smazat" />
-         </children>
-      </FlowPane>
-      <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="5.0" VBox.vgrow="ALWAYS">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="30.0" vgrow="NEVER" />
-          <RowConstraints maxHeight="-Infinity" minHeight="100.0" vgrow="ALWAYS" />
-        </rowConstraints>
-         <children>
-            <Label text="Skupiny" />
-            <ListView fx:id="lstGroups" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-   </children>
+        <VBox>
+            <MFXTextField fx:id="txtName" floatingText="Název"/>
+        </VBox>
+        <FlowPane hgap="10.0" VBox.vgrow="NEVER">
+            <children>
+                <MFXButton fx:id="btnAdd" mnemonicParsing="false" onAction="#onAddGroup" text="Přidat"/>
+                <MFXButton fx:id="btnEdit" mnemonicParsing="false" onAction="#onEditGroup" text="Upravit"/>
+                <MFXButton fx:id="btnDelete" mnemonicParsing="false" onAction="#onDeleteGroup" text="Smazat"/>
+            </children>
+        </FlowPane>
+        <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="5.0" VBox.vgrow="ALWAYS">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="30.0" vgrow="NEVER"/>
+                <RowConstraints maxHeight="-Infinity" minHeight="100.0" vgrow="ALWAYS"/>
+            </rowConstraints>
+            <children>
+                <Label text="Skupiny"/>
+                <MFXListView fx:id="lstGroups" maxHeight="Infinity" maxWidth="Infinity" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1"/>
+            </children>
+        </GridPane>
+    </children>
 </VBox>
