--- a/ui/src/main/resources/cz/masci/drd/ui/fxml/home-screen.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/fxml/home-screen.fxml
@@ -38,10 +38,10 @@
                 <RowConstraints minHeight="80" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <MFXButton buttonType="RAISED" fx:id="btnAdventures" maxWidth="Infinity" maxHeight="Infinity" text="Dobrodružství" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <MFXButton buttonType="RAISED" fx:id="btnMonsters" maxWidth="Infinity" maxHeight="Infinity" text="Příšery" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-                <MFXButton buttonType="RAISED" fx:id="btnWeapons" maxWidth="Infinity" maxHeight="Infinity" text="Zbraně" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <MFXButton buttonType="RAISED" fx:id="btnBattle" maxWidth="Infinity" maxHeight="Infinity" text="Bitva" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <MFXButton fx:id="btnAdventures" styleClass="tile" maxWidth="Infinity" maxHeight="Infinity" text="Dobrodružství" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <MFXButton fx:id="btnMonsters" styleClass="tile" maxWidth="Infinity" maxHeight="Infinity" text="Příšery" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <MFXButton fx:id="btnWeapons" styleClass="tile" maxWidth="Infinity" maxHeight="Infinity" text="Zbraně" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <MFXButton fx:id="btnBattle" styleClass="tile" maxWidth="Infinity" maxHeight="Infinity" text="Bitva" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
             </children>
         </GridPane>
     </children>
