--- a/ui/src/main/resources/cz/masci/drd/ui/battle/fxml/battle.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/fxml/battle.fxml
@@ -20,11 +20,9 @@
   -->
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <BorderPane fx:id="mainPane" minHeight="400.0" minWidth="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <bottom>
@@ -39,17 +37,14 @@
         <AnchorPane fx:id="centerPane" minHeight="100.0" minWidth="400.0" BorderPane.alignment="CENTER"/>
     </center>
     <top>
-        <Pane fx:id="topPane" BorderPane.alignment="CENTER">
+        <AnchorPane fx:id="topPane">
             <children>
-                <Label fx:id="lblTitle" styleClass="battleTitle" alignment="TOP_CENTER" prefWidth="600.0" maxWidth="Infinity" text="Label" wrapText="true">
-                    <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                    </padding>
+                <Label fx:id="lblTitle" styleClass="battleTitle" alignment="TOP_CENTER" text="Label" wrapText="true" AnchorPane.leftAnchor="5" AnchorPane.topAnchor="5" AnchorPane.rightAnchor="5">
                     <font>
                         <Font name="Arial" size="24.0"/>
                     </font>
                 </Label>
             </children>
-        </Pane>
+        </AnchorPane>
     </top>
 </BorderPane>
