--- a/ui/src/main/resources/cz/masci/drd/ui/adventure/control/fxml/adventure-detail.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/adventure/control/fxml/adventure-detail.fxml
@@ -2,6 +2,6 @@
 
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.layout.VBox?>
-<fx:root type="VBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="VBox" spacing="10" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <MFXTextField fx:id="name" floatingText="Název" maxWidth="Infinity"/>
 </fx:root>
