--- a/ui/src/main/resources/cz/masci/drd/ui/css/app.css
+++ b/ui/src/main/resources/cz/masci/drd/ui/css/app.css
@@ -27,8 +27,10 @@
 }
 
 /* base */
+
 .mfx-text-field {
-    -fx-padding: 0 8 0 8;
+    -fx-padding: 0 5 0 5;
+    -fx-pref-height: 40px;
     -fx-font-size: 14px;
     -fx-font-weight: 400;
     -fx-font-family: sans-serif;
