--- a/ui/src/main/resources/cz/masci/drd/ui/adventure/control/fxml/weapon-detail.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/adventure/control/fxml/weapon-detail.fxml
@@ -1,26 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<fx:root id="GridPane" hgap="5.0" type="GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-  <Label text="Název" />
-  <TextField fx:id="name" GridPane.columnIndex="1" />
-  <Label text="Útočné číslo" GridPane.rowIndex="1" />
-  <TextField fx:id="strength" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-  <Label text="Útočnost" GridPane.rowIndex="2" />
-  <TextField fx:id="damage" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-  <columnConstraints>
-    <ColumnConstraints />
-      <ColumnConstraints hgrow="ALWAYS" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-  </rowConstraints>
-  <padding>
-    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-  </padding>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.layout.VBox?>
+<fx:root type="VBox" spacing="10" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <MFXTextField fx:id="name" floatingText="Název" maxWidth="Infinity"/>
+    <MFXTextField fx:id="strength" floatingText="Útočné číslo"/>
+    <MFXTextField fx:id="damage" floatingText="Útočnost"/>
 </fx:root>
