--- a/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/close-combat-select-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/action/controller/fxml/close-combat-select-action.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <!--
   ~ Copyright (c) 2023
   ~
@@ -21,15 +18,9 @@
   ~ You should have received a copy of the GNU General Public License
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
+<?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0"/>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="200.0"/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="25.0" prefHeight="30" valignment="CENTER" vgrow="NEVER"/>
-    </rowConstraints>
-    <Label text="Obránce"/>
-    <ComboBox fx:id="duellistBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1"/>
-</GridPane>
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <MFXComboBox fx:id="duellistBox" floatingText="Obránce" floatMode="BORDER" prefHeight="25.0" prefWidth="400.0"/>
+</VBox>
