--- a/ui/src/main/resources/cz/masci/drd/ui/battle/fxml/battle.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/battle/fxml/battle.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
 <!--
   ~ Copyright (c) 2023
   ~
@@ -24,30 +19,32 @@
   ~  along with Foobar. If not, see <https://www.gnu.org/licenses/>.
   -->
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 <BorderPane fx:id="mainPane" minHeight="400.0" minWidth="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <bottom>
-      <AnchorPane prefHeight="37.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="btnPrev" layoutX="14.0" layoutY="100.0" minHeight="25.0" minWidth="52.0" mnemonicParsing="false" onAction="#slide" text="Button" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-            <Button fx:id="btnNext" layoutX="134.0" layoutY="101.0" minHeight="25.0" minWidth="50.0" mnemonicParsing="false" onAction="#slide" text="Button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-         </children>
-      </AnchorPane>
-   </bottom>
+    <bottom>
+        <AnchorPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <children>
+                <MFXButton fx:id="btnPrev" styleClass="outlined" onAction="#slide" text="Button" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0"/>
+                <MFXButton fx:id="btnNext" styleClass="outlined" onAction="#slide" text="Button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0"/>
+            </children>
+        </AnchorPane>
+    </bottom>
     <center>
-        <AnchorPane fx:id="centerPane" minHeight="100.0" minWidth="400.0" BorderPane.alignment="CENTER" />
+        <AnchorPane fx:id="centerPane" minHeight="100.0" minWidth="400.0" BorderPane.alignment="CENTER"/>
     </center>
-   <top>
-      <Pane fx:id="topPane" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="lblTitle" alignment="TOP_LEFT" prefWidth="600.0" text="Label" textFill="#0034d0" wrapText="true">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-               <font>
-                  <Font name="Arial" size="24.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-   </top>
+    <top>
+        <AnchorPane fx:id="topPane">
+            <children>
+                <Label fx:id="lblTitle" styleClass="battleTitle" alignment="TOP_CENTER" text="Label" wrapText="true" AnchorPane.leftAnchor="5" AnchorPane.topAnchor="5" AnchorPane.rightAnchor="5">
+                    <font>
+                        <Font name="Arial" size="24.0"/>
+                    </font>
+                </Label>
+            </children>
+        </AnchorPane>
+    </top>
 </BorderPane>
