DD-49 Remove home screen fxml related files

--- a/ui/src/main/resources/cz/masci/drd/ui/app/battle/action/controller/fxml/single-actor-action.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/app/battle/action/controller/fxml/single-actor-action.fxml
@@ -27,7 +27,7 @@
    <children>
       <HBox spacing="10.0">
          <children>
-            <Label fx:id="text" text="" />
+            <Label fx:id="text" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" />
